deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prime-app
  labels:
    app: prime-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prime-app
  template:
    metadata:
      labels:
        app: prime-app
    spec:
      containers:
      - name: prime-app
        image: arunagri03/amazon_prime
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: prime-app
  labels:
    app: prime-app
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: prime-app
