ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
     cert-manager.io/cluster-issuer: kubeissuer
     kubernetes.io/ingress.class: nginx
     external-dns.alpha.kubernetes.io/hostname: "*.arunm.online"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prime.arunm.online
    - netflix.arunm.online
    secretName: private
  rules:
  - host: "prime.arunm.online"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prime-app
            port:
              number: 3000
 
  - host: "netflix.arunm.online"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: netflix-app
            port:
              number: 80
